# helpdesk-lite-flask

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/workflows/: ci.yml
migrations/versions/: 9a21a608b755_create_helpdesk_tables_users_tickets_.py
src/helpdesk/: __init__.py  cli.py  config.py  decorators.py  extensions.py  models.py  schemas.py
src/helpdesk/blueprints/: __init__.py
src/helpdesk/blueprints/auth/: routes.py
src/helpdesk/blueprints/pages/: routes.py
src/helpdesk/blueprints/tickets/: routes.py
src/helpdesk/blueprints/users/: routes.py
src/helpdesk/static/css/: styles.css
src/helpdesk/static/js/: app.js
src/helpdesk/templates/: base.html
src/helpdesk/templates/auth/: login.html  password.html
src/helpdesk/templates/errors/: 400.html  403.html  404.html  429.html  500.html
src/helpdesk/templates/pages/: account.html  home.html
src/helpdesk/templates/tickets/: detail.html  form.html  list.html
src/helpdesk/templates/users/: form.html  list.html
tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_features.py  test_security.py  test_smoke.py  test_tickets.py  test_users.py
