[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "helpdesk-lite"
version = "1.0.0"
description = "HelpDesk Lite — sistema acadêmico de helpdesk em Flask (ORM, sessão, migrations e testes)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.1,<4",
    "Flask-SQLAlchemy>=3.1,<4",
    "Flask-Migrate>=4.0,<5",
    "python-dotenv>=1.0,<2",
    "PyMySQL>=1.1,<2",
    "cryptography>=42",
    "marshmallow>=4.0,<5",
    "Flask-WTF>=1.2,<2",
    "Flask-Limiter>=3.5,<5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-flask>=1.3",
]
dev = [
    "ruff>=0.6",
    "black>=24.0",
    "pre-commit>=3.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = "migrations|venv_desenvolvimento"

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["migrations", "venv_desenvolvimento"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort. E501 (linha longa) fica a cargo do black.
select = ["E", "F", "I", "W"]
ignore = ["E501"]
